# conda-pypi

./: .authors.yml  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  HOW_WE_USE_GITHUB.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
.github/template-files/: config.yml
.github/template-files/templates/: pull_request_template_details.md
.github/workflows/: build.yml  test.yml
conda_pypi/: __init__.py  build.py  convert_tree.py  exceptions.py  index.py  installer.py  license_files.py  main.py  markers.py  plugin.py  pypi_metadata.py  translate.py
conda_pypi/cli/: convert.py  install.py
conda_pypi/dependencies/: pypi.py
conda_pypi/package_extractors/: whl.py
conda_pypi/post_command/: install.py
docs/: features.md  index.md  quickstart.md
docs/developer/: architecture.md  marker-conversion.md  releasing.md
docs/developer/testing/: mock-channel-server.md
docs/reference/commands/: convert.rst
news/: 272-fix-conda-package-streaming-dependency.txt  281-build-requires  289-remove-package-record-versions  295-docs-remove-editable-vcs-install  300-info-licenses-from-wheels  306-add-pypi-metadata-to-conda-index-cache.md  309-fix-hardcoded-entrypoint-shebangs  338-installer-trailing-newline  341-add-upload-timestamps  408-remove-pip-post-install-plugin  stream-conda-to-wheel.md
recipe/: meta.yaml
tests/: conftest.py  http_test_server.py  test_benchmarks.py  test_build.py  test_conda_create.py  test_conda_local_channel.py  test_convert_tree.py  test_editable.py  test_index.py  test_install.py  test_installer_data_files.py  test_license_files.py  test_markers.py  test_pypi_metadata.py  test_translate.py  update_repodata.py
tests/cli/: test_convert.py  test_install.py
tests/conda-forge-local/: augment_noarch.py
tests/conda-forge-local/pypi/: repodata.json
tests/conda_local_channel/: generate_noarch_wheel_repodata.py  wheel_packages.txt
tests/conda_local_channel/linux-64/: index.html  repodata_from_packages.json
tests/conda_local_channel/noarch/: index.html  repodata.json  repodata_from_packages.json
tests/conda_local_channel/osx-arm64/: index.html  repodata_from_packages.json
tests/data/pypi_json/: fastapi-0.116.1.json
tests/pypi_local_index/: index.html
tests/pypi_local_index/entrypoint-pkg/: entrypoint_pkg-1.0.0-py3-none-any.whl  index.html
tests/pypi_local_index/license-file-pkg/: index.html  lwt-0.0.1-py3-none-any.whl
